<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/search_electorals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onSearch"
        android:text="@string/search_btn" />

    <Button
        android:id="@+id/import_electorals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onImport"
        android:text="@string/import_btn" />

    <Button
        android:id="@+id/clear_electorals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClear"
        android:text="@string/clear_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format" />

</LinearLayout>