<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/constituency_no" />

        <EditText
            android:id="@+id/c_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/part_from" />

        <EditText
            android:id="@+id/from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/part_to" />

        <EditText
            android:id="@+id/to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/_import"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onImport"
        android:text="@string/download" />

</LinearLayout>